# aed2122_practicals

aed2122_p01/: .gitignore
aed2122_p01/Tests/: parque.cpp  parque.h  tests.cpp
aed2122_p01_extra/: CMakeLists.txt  main.cpp
aed2122_p01_extra/Tests/: mail.cpp  mail.h  postOffice.cpp  postOffice.h  postman.cpp  postman.h  tests.cpp
aed2122_p02/: CMakeLists.txt  aeda2122_p02ex2b.txt  main.cpp
aed2122_p02/Tests/: fibonacci.h  myVector.h  tests.cpp
aed2122_p03/: CMakeLists.txt  main.cpp
aed2122_p03/Tests/: funSearchProblem.cpp  funSearchProblem.h  tests.cpp
aed2122_p03/docs/: Doxyfile
aed2122_p03/docs/output/html/: annotated.html  class_fun_search_problem-members.html  class_fun_search_problem.html  class_negative_height-members.html  class_negative_height.html  classes.html  dir_33c78a012c8d08979f57a54a07694c46.html  files.html  fun_search_problem_8h_source.html  functions.html  functions_func.html  index.html
aed2122_p03/docs/output/html/search/: all_0.js  all_1.js  classes_0.js  functions_0.js  searchdata.js
aed2122_p04/: CMakeLists.txt  main.cpp
aed2122_p04/Tests/: funSortProblem.cpp  funSortProblem.h  piece.cpp  piece.h  product.cpp  product.h  tests.cpp
aed2122_p05/: CMakeLists.txt  main.cpp
aed2122_p05/Tests/: game.cpp  game.h  kid.cpp  kid.h  performance.h  stackExt.h  tests.cpp
aed2122_p06/: CMakeLists.txt  main.cpp
aed2122_p06/Tests/: binaryTree.h  bst.h  dic.txt  dictionary.cpp  dictionary.h  game.cpp  game.h  tests.cpp
aed2122_p07/: CMakeLists.txt  main.cpp
aed2122_p07/Tests/: bst.h  funWithBSTs.cpp  funWithBSTs.h  tests.cpp
aed2122_p08/: CMakeLists.txt  main.cpp
aed2122_p08/Tests/: funWithHashTables.cpp  funWithHashTables.h  hashTable.h  tests.cpp
aed2122_p09/: CMakeLists.txt  main.cpp
aed2122_p09/Tests/: funWithGraphs.h  tests.cpp
aed2122_p09/aed2122_p09/Tests/: funWithGraphs.cpp  graph.cpp  graph.h
aed2122_p10/aed2122_p10/: CMakeLists.txt  main.cpp
aed2122_p10/aed2122_p10/Tests/: disjointSets.h  funWithGraphs.cpp  funWithGraphs.h  graph.cpp  graph.h  minHeap.h  tests.cpp
aed2122_p11/aed2122_p11/: CMakeLists.txt  main.cpp
aed2122_p11/aed2122_p11/Tests/: funWithGraphs.cpp  funWithGraphs.h  graph.cpp  graph.h  minHeap.h  tests.cpp
